--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.AssignRequisitionViewModel>
 
 @{
+    ViewBag.Title = "Assigned Requisition";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
 <h2>Assigned Requisition</h2>
-<br/>
+<hr/>
 
 <table class="table table-bordered table-active table-striped">
     <tr>
