--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -1,12 +1,14 @@
 ﻿@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
-    ViewBag.Title = "ViewDetails";
+    ViewBag.Title = "Requisition Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <h2>Requisition Details</h2>
+<hr/>
+
 <div>
-    <hr/>
     <table class="table table-light table-active table-primary table-hover">
         
         <tr>
