--- a/RMS.App/Views/Departments/Details.cshtml
+++ b/RMS.App/Views/Departments/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.DepartmentViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Department Details";
 }
 
 <h2>Department Details</h2>
