--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -3,7 +3,7 @@
 @model RMS.App.ViewModels.EmployeeViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Employee";
 }
 
 <h2>Create Employee</h2>
