--- a/RMS.App/Views/Employees/Details.cshtml
+++ b/RMS.App/Views/Employees/Details.cshtml
@@ -1,11 +1,12 @@
 ﻿@model RMS.App.ViewModels.EmployeeViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Employee Details";
 }
 
 <h2>Employee Details</h2>
-<hr />
+<hr/>
+
 <div class="container">
     <div class="row">
         <div class="col-md-10">
