--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -1,11 +1,12 @@
 ﻿@model RMS.App.ViewModels.EmployeeViewModel
 
 @{
-    ViewBag.Title = "Update Employee Profile";
+    ViewBag.Title = "Update Employee";
 }
 
-<h2>Update Employee Information</h2>
-<hr />
+<h2>Update Employee</h2>
+<hr/>
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
