--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "CheckIn";
+    ViewBag.Title = "Check-In List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Check-In List</h2>
-<br/>
+<hr/>
 
 <table class="table table-bordered table-active table-striped">
     <tr>
