--- a/RMS.App/Views/Organizations/Details.cshtml
+++ b/RMS.App/Views/Organizations/Details.cshtml
@@ -1,11 +1,12 @@
 ﻿@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Organization Details";
 }
 
 <h2>Organization Details</h2>
-<hr />
+<hr/>
+<br/>
 <div class="row">
     
     <div class="col-md-2">@Html.DisplayNameFor(model => model.Name)</div>
