--- a/RMS.App/Views/RequisitionStatus/Edit.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Requisition Status";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
