--- a/RMS.App/Views/VehicleTypes/Details.cshtml
+++ b/RMS.App/Views/VehicleTypes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Vehicle Type Details";
 }
 
 <h2>Vehicle Type Details</h2>
