--- a/RMS.App/Views/VehicleTypes/Index.cshtml
+++ b/RMS.App/Views/VehicleTypes/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.VehicleTypeViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Vehicle Type List";
 }
 
-
 <h2>Vehicle Type List</h2>
-<br />
+<hr/>
+
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-info">
