--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -1,31 +1,33 @@
 ﻿@model RMS.App.ViewModels.AssignRequisitionViewModel
 
 @{
+    ViewBag.Title = "Update Assign Requisition";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-    
-    @using (Html.BeginForm())
+<h2>Update Assign Requisition</h2>
+<hr />
+
+@using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
-            <h4>Update Assign Requisition</h4>
-            <hr />
+            
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
     
-            <div class="form-group">
-                @Html.LabelFor(model => model.RequisitionId, "RequisitionId", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
                     @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
                 </div>
             </div>
     
-            <div class="form-group">
-                @Html.LabelFor(model => model.VehicleId, "Vehicle Reg No", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+            <div class="form-group row">
+                @Html.LabelFor(model => model.VehicleId, "Vehicle Reg No", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
                     @Html.DropDownList("VehicleId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
                 </div>
@@ -33,23 +35,21 @@
     
            
     
-            <div class="form-group">
-                @Html.LabelFor(model => model.EmployeeId, "Driver Name", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+            <div class="form-group row">
+                @Html.LabelFor(model => model.EmployeeId, "Driver Name", htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-9">
                     @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                 </div>
             </div>
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
+
+            <div class="form-group row">
+                <div class="col-md-3"></div>
+                <div class="col-md-9">
+                    <input type="submit" value="Save" class="btn btn-default"/> &nbsp;
+                    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
                 </div>
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 
