--- a/RMS.App/Views/AssignRequisitions/Error.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Error.cshtml
@@ -6,7 +6,9 @@
 }
 
 <h2>Error</h2>
-<div>
+<hr/>
+
+<div class="row">
     <div class="text text-info">There's No Data Found..! Please Provide Valid Id.....Thanks</div>
 </div>
 
