--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -1,12 +1,13 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Requests";
+    ViewBag.Title = "New Requests List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>New Requests List</h2>
-<br/>
+<hr/>
+
 <table class="table table-bordered table-active table-striped">
     <tr>
         <th>
