--- a/RMS.App/Views/AssignRequisitions/RequisitionDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/RequisitionDetails.cshtml
@@ -1,14 +1,14 @@
 ﻿@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Requisition Details";
 }
 
-<h2>Details</h2>
+<h2>Requisition Details</h2>
+<hr/>
 
 <div>
-    <h4>Requisition</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Employee.FullName)
