--- a/RMS.App/Views/Departments/Create.cshtml
+++ b/RMS.App/Views/Departments/Create.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.DepartmentViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Department";
 }
 
-<h2>Create</h2>
-
+<h2>Create Department</h2>
+<hr/>
 
 @using (Html.BeginForm("Create","Departments",FormMethod.Post, new {id="departmentForm"})) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Department</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
