--- a/RMS.App/Views/Departments/Edit.cshtml
+++ b/RMS.App/Views/Departments/Edit.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.DepartmentViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Department";
 }
 
-<h2>Edit</h2>
-
+<h2>Edit Department</h2>
+<hr />
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Department</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
