--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.DepartmentViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Department List";
 }
-<br/>
-<h2>Department List</h2>
 
+<h2>Department List</h2>
+<hr/>
 @if (TempData["msg"] != null)
 {
     <div class="alert alert-info">
