--- a/RMS.App/Views/Designations/Create.cshtml
+++ b/RMS.App/Views/Designations/Create.cshtml
@@ -1,10 +1,11 @@
 ﻿@model RMS.App.ViewModels.DesignationViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Designation";
 }
 
-<h2>Create</h2>
+<h2>Create Designation</h2>
+<hr/>
 
 @using (Html.BeginForm())
 {
@@ -12,8 +13,6 @@
 
     <div class="form-horizontal">
 
-        <h4>Designation</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
