--- a/RMS.App/Views/Designations/Delete.cshtml
+++ b/RMS.App/Views/Designations/Delete.cshtml
@@ -1,15 +1,15 @@
 ﻿@model RMS.App.ViewModels.DesignationViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Designation";
 }
 
-<h2>Delete</h2>
-
+<h2>Delete Designation</h2>
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+
 <div>
-    <h4>Designation</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Title)
