--- a/RMS.App/Views/Designations/Details.cshtml
+++ b/RMS.App/Views/Designations/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.DesignationViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Designation Details";
 }
 
 <h2>Designation Details</h2>
