--- a/RMS.App/Views/EmployeeTypes/Delete.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Delete.cshtml
@@ -1,16 +1,16 @@
 ﻿@model RMS.App.ViewModels.EmployeeTypeViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Employee Type";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
-
+<h2>Delete Employee Type</h2>
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+
 <div>
-    <h4>Employee Type</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Type)
