--- a/RMS.App/Views/EmployeeTypes/Edit.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Edit.cshtml
@@ -1,21 +1,21 @@
 ﻿@model RMS.App.ViewModels.EmployeeTypeViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Employee Type";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
+<h2>Edit Employee Type</h2>
+<hr/>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Employee Type</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group row">
             @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
