--- a/RMS.App/Views/Employees/Delete.cshtml
+++ b/RMS.App/Views/Employees/Delete.cshtml
@@ -1,13 +1,14 @@
 ﻿@model RMS.App.ViewModels.EmployeeViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Employee";
 }
 
 <h2>Delete Employee</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
 <hr/>
+
 <div class="container">
     <div class="row">
         <div class="col-md-10">
