--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.EmployeeViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employee List";
 }
+
+<h2>Employee List</h2>
+<hr/>
 
 @if (TempData["msg"] != null)
 {
