--- a/RMS.App/Views/GatePass/CompleteRequisition.cshtml
+++ b/RMS.App/Views/GatePass/CompleteRequisition.cshtml
@@ -1,11 +1,12 @@
 ﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "CompleteRequisition";
+    ViewBag.Title = "Complete Requisition";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CompleteRequisition</h2>
+<h2>Complete Requisition</h2>
+<hr/>
 
 
 @using (Html.BeginForm())
@@ -13,12 +14,11 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RequisitionStatusViewModel</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
@@ -42,17 +42,16 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+                <input type="submit" value="Save" class="btn btn-default"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
