--- a/RMS.App/Views/GatePass/Index.cshtml
+++ b/RMS.App/Views/GatePass/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@model IEnumerable<RMS.App.ViewModels.RequisitionStatusViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Check-Out List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Check-Out List</h2>
-<br/>
+<hr/>
+
 <div class="container">
     <div class="row align-items-center">
         <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
