--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -2,19 +2,20 @@
 @model RMS.App.ViewModels.OrganizationViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Organization";
 }
 
 <h2>Create Organization</h2>
-
+<h4>Please Provide your Information</h4>
+<hr/>
+<br/>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         
-        <h4>Please Provide your Information</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
