--- a/RMS.App/Views/Organizations/Delete.cshtml
+++ b/RMS.App/Views/Organizations/Delete.cshtml
@@ -1,15 +1,15 @@
 ﻿@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Organization";
 }
 
-<h2>Delete</h2>
+<h2>Delete Organization</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+<br/>
 <div>
-    <h4>Organization</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
@@ -41,7 +41,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
             @Html.ActionLink("Back to List", "Index",null, new {@class="btn btn-info"})
         </div>
     }
