--- a/RMS.App/Views/Organizations/Edit.cshtml
+++ b/RMS.App/Views/Organizations/Edit.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.OrganizationViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Organization";
 }
 
-<h2>Edit</h2>
-
+<h2>Edit Organization</h2>
+<hr />
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Organization</h4>
-        <hr />
+        
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
@@ -44,7 +43,7 @@
         <div class="form-group row">
             <div class="control-label col-md-2 "></div>
             <div class="col-md-6">
-                <input type="submit" value="Update" class="btn btn-default"/>
+                <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new {@class = "btn btn-info"})
             </div>
         </div>
