--- a/RMS.App/Views/RequisitionStatus/Create.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Create.cshtml
@@ -1,20 +1,19 @@
 ﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Requisition Status";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
-
+<h2>Create Requisition Status</h2>
+<hr/>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Requisition Status</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
