--- a/RMS.App/Views/RequisitionStatus/Delete.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Delete.cshtml
@@ -1,14 +1,15 @@
 ﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Requisition Status";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Delete Requisition Status</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
-<hr />
+<hr/>
+
 <div>
     
     <dl class="dl-horizontal">
