--- a/RMS.App/Views/Requisitions/Delete.cshtml
+++ b/RMS.App/Views/Requisitions/Delete.cshtml
@@ -1,15 +1,16 @@
 ﻿@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Requisition";
 }
 
-<h2>Delete</h2>
+<h2>Delete Requisition</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+
 <div>
-    <h4>Requisition</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Employee.FullName)
