--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -1,14 +1,14 @@
 ﻿@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Requisition Details";
 }
 
-<h2>Details</h2>
+<h2>Requisition Details</h2>
+<hr/>
 
 <div>
-    <h4>Requisition</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Employee.FullName)
@@ -76,6 +76,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) 
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
     @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
 </p>
