--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -1,23 +1,22 @@
 ﻿@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Requisition";
 }
 
-<h2>Edit</h2>
-
+<h2>Edit Requisition</h2>
+<hr/>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Requisition</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.FromPlace, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.FromPlace, new { htmlAttributes = new { @class = "form-control" } })
@@ -25,7 +24,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.DestinationPlace, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.DestinationPlace, new { htmlAttributes = new { @class = "form-control" } })
@@ -33,7 +32,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.StartDateTime, new { htmlAttributes = new { @class = "form-control" } })
@@ -41,7 +40,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control" } })
@@ -49,7 +48,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
@@ -57,7 +56,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequestFor, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.EditorFor(model => model.RequestFor, new { htmlAttributes = new { @class = "form-control" } })
@@ -65,7 +64,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-6">
                 @Html.DropDownList("EmployeeId", null,"Select", htmlAttributes: new { @class = "form-control" })
@@ -73,10 +72,11 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Update" class="btn btn-default"/>
-                @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-10">
+                <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
             </div>
         </div>
     </div>
