--- a/RMS.App/Views/Shared/_LayoutPartial.cshtml
+++ b/RMS.App/Views/Shared/_LayoutPartial.cshtml
@@ -4,7 +4,7 @@
     <!-- Mobile Specific Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="~/Content/img/fav.png">
+    <link rel="shortcut icon" href="~/Content/img/bcc_logo.png">
     <!-- Author Meta -->
     <meta name="author" content="colorlib">
     <!-- Meta Description -->
