--- a/RMS.App/Views/VehicleTypes/Create.cshtml
+++ b/RMS.App/Views/VehicleTypes/Create.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Vehicle Type";
 }
 
-<h2>Create</h2>
-
+<h2>Create Vehicle Type</h2>
+<hr/>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Vehicle Type</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group row">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
