--- a/RMS.App/Views/VehicleTypes/Delete.cshtml
+++ b/RMS.App/Views/VehicleTypes/Delete.cshtml
@@ -1,15 +1,16 @@
 ﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Vehicle Type";
 }
 
-<h2>Delete</h2>
+<h2>Delete Vehicle Type</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+
 <div>
-    <h4>Vehicle Type</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
