--- a/RMS.App/Views/VehicleTypes/Edit.cshtml
+++ b/RMS.App/Views/VehicleTypes/Edit.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.VehicleTypeViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Vehicle Type";
 }
 
-<h2>Edit</h2>
-
+<h2>Edit Vehicle Type</h2>
+<hr/>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>VehicleType</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
