--- a/RMS.App/Views/Vehicles/Create.cshtml
+++ b/RMS.App/Views/Vehicles/Create.cshtml
@@ -1,19 +1,18 @@
 ﻿@model RMS.App.ViewModels.VehicleViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Vehicle";
 }
 
-<h2>Create</h2>
-
+<h2>Create Vehicle</h2>
+<hr/>
 
 @using (Html.BeginForm("Create", "Vehicles", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Vehicle</h4>
-        <hr />
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group row">
             @Html.LabelFor(model => model.BrandName, htmlAttributes: new { @class = "control-label col-md-2" })
