--- a/RMS.App/Views/Vehicles/Delete.cshtml
+++ b/RMS.App/Views/Vehicles/Delete.cshtml
@@ -1,15 +1,16 @@
 ﻿@model RMS.App.ViewModels.VehicleViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Vehicle";
 }
 
-<h2>Delete</h2>
+<h2>Delete Vehicle</h2>
 
 <h3 class="text-danger">Are you sure you want to delete this?</h3>
+<hr/>
+
 <div>
-    <h4>Vehicle</h4>
-    <hr />
+
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.VehicleTypeId)
