--- a/RMS.App/Views/Vehicles/Details.cshtml
+++ b/RMS.App/Views/Vehicles/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.VehicleViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Vehicle Details";
 }
  
 <h2>Vehicle Details</h2>
