--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -18,39 +18,40 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new {@class = "control-label col-md-3"})
-            <div class="col-md-9">
-                @Html.TextBox("RequisitionId", null, new {htmlAttributes = new {@class = "text-box single-line readonly"}})
-                @Html.ValidationMessageFor(model => model.RequisitionId, "Requisition Id Not Changed", new {@class = "text-danger"})
-            </div>
-            <div class="form-group row">
-                @Html.Label("Status Id", htmlAttributes: new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.DropDownList("RequisitionStatusId", null, new { htmlAttributes = new { @class = "text-box single-line readonly" } })
-                    @Html.ValidationMessage("Status Id", "Requisition Id Not Changed", new { @class = "text-danger" })
-                </div>
+            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-4">
+                @Html.TextBox("RequisitionId", null, htmlAttributes: new { @class = "form-control", @readOnly="readonly"})
+                @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
+            <div class="form-group row">
+                @Html.LabelFor(model=>model.RequisitionStatusId, htmlAttributes: new { @class = "control-label col-md-3" })
+                <div class="col-md-4">
+                    @Html.DropDownList("RequisitionStatusId", null, htmlAttributes:new { @class = "form-control", @readOnly="readonly"})
+                    @Html.ValidationMessageFor(model=>model.RequisitionStatusId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        
         <div class="form-group row">
-            @Html.LabelFor(model => model.RequisitionNumber, "RequisitionNumber", htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @Html.TextBox("RequisitionNumber",null, new { htmlAttributes = new {@readonly=true}} )
-                @Html.ValidationMessageFor(model => model.RequisitionNumber, "Requisition Number Not Changed", new { @class = "text-danger" })
+            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-3" })
+            <div class="col-md-4">
+                @Html.TextBox("RequisitionNumber",null,htmlAttributes:new {@class="form-control",@readOnly="readonly"})
+                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
             @Html.LabelFor(model => model.VehicleId, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @Html.DropDownList("VehicleId",null, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-4">
+                @Html.DropDownList("VehicleId", null, "Select" ,htmlAttributes:new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
             @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @Html.DropDownList("EmployeeId",null, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="col-md-4">
+                @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes:new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,7 +59,7 @@
         <div class="form-group row">
             <div class="col-md-3"></div>
             <div class="col-md-9">
-                <input type="submit" value="Create" class="btn btn-default"/> &nbsp;
+                <input type="submit" value="Assign" class="btn btn-default"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
