--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -5,69 +5,100 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="container" style="min-height: 400px">
+    <h2>Assigned Requisition</h2>
+    <hr />
 
-<h2>Assigned Requisition</h2>
-<hr/>
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
+        </div>
+    }
 
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayName("Driver Name")
-        </th>
-        <th>
-            @Html.DisplayName("From Place")
-        </th>
-        <th>
-            @Html.DisplayName("Vehicle Brand Name")
-        </th>
-        <th>
-            @Html.DisplayName("Vehicle Reg No")
-        </th>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
+                <p>
 
-        <th>
-            Action
-        </th>
-    </tr>
-    @{
-        var sl = 0;
-        if (Model.Count() != 0)
-        {
-            foreach (var item in Model)
+                </p>
+            </div>
+
+            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
+                <p>
+                    @using (Html.BeginForm("Index", "AssignRequisitions", FormMethod.Get))
+                    {
+                        <b>Search by () </b>
+                        @Html.TextBox("searchText")
+                        <input type="submit" value="Search" />
+                    }
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <table class="table table-bordered table-active table-striped">
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayName("Driver Name")
+            </th>
+            <th>
+                @Html.DisplayName("From Place")
+            </th>
+            <th>
+                @Html.DisplayName("Vehicle Brand Name")
+            </th>
+            <th>
+                @Html.DisplayName("Vehicle Reg No")
+            </th>
+
+            <th>
+                Action
+            </th>
+        </tr>
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
             {
-                sl++;
-                <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Employee.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Requisition.FromPlace)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Vehicle.BrandName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Vehicle.RegNo)
-                    </td>
+                foreach (var item in Model)
+                {
+                    sl++;
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Employee.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Requisition.FromPlace)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Vehicle.BrandName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Vehicle.RegNo)
+                        </td>
 
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                    </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
+                    <td class="text-center text-danger" colspan="6"> Data Not Found!</td>
                 </tr>
             }
         }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="6"> Data Not Found!</td>
-            </tr>
-        }
-    }
-</table>
+    </table>
+</div>
+
+
