--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -145,7 +145,7 @@
                                 @*@Html.LabelFor(model => model.AddressViewModel.AddressType, htmlAttributes: new { @class = "control-label col-md-2" })*@
                                 <div class="col-md-12">
                                     @Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Present Address", Type = "Text", value = "Present Address", @readOnly = "readonly", @id = "addressType"}})
-                                    @Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})
+                                    @*@Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})*@
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -215,10 +215,10 @@
                             <div class="form-group row">
                                 <div class="col-md-6">
                                     @Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Permanent Address", Type = "Text", value = "Permanent Address", @readOnly = "readonly"}})
-                                    @Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})
+                                    @*@Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})*@
                                 </div>
                                 <br/><br/>
-                                <div class="col-md-5" style="background-color: #e9ecef; margin: 0 15px;">
+                                <div class="col-md-5" style="margin: 0 15px;">
                                     <p><input type="checkbox" id="PACheckBox1"/> <strong> Same as present address </strong>
                                     </p>
                                 </div>
@@ -368,6 +368,6 @@
     @Scripts.Render("~/bundles/jqueryval")
     @*@<script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery-1.10.2.js"></script>*@
-    <script src="~/Scripts/AddressJs/DivisionDistrictUpazilaLoad.js"></script>
+    <script src="~/Scripts/AddressJs/CreateEmployeeAddress.js"></script>
 
 }
