--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -4,20 +4,21 @@
     ViewBag.Title = "Organization List";
 }
 
-<h2>Organization List</h2>
-<hr/>
-@if (TempData["msg"] != null)
-{
-    <div class="alert alert-info">
-        @Html.Raw(TempData["msg"])
-    </div>
-}
-<br />
-<div class="container">
+<div class="container" style="min-height: 400px">
+    <h2>Organization List</h2>
+    <hr />
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
+        </div>
+    }
+    <br />
+
     <div class="row align-items-center">
         <div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
             <p>
-                @Html.ActionLink("Create New", "Create", null, htmlAttributes: new {@class = "btn btn-default"})
+                @Html.ActionLink("Create New", "Create", null, htmlAttributes: new { @class = "btn btn-default" })
             </p>
         </div>
 
@@ -28,69 +29,69 @@
                     <b>Search by (Name/Code/Reg No)</b>
                     @Html.TextBox("searchText")
                     <input type="submit" value="Search" />
-                } 
+                }
             </p>
-            
+
         </div>
     </div>
-</div>
-
-<br/>
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RegNo)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
-    @{
-        var sl = 0;
-        if (Model.Count() != 0)
-        {
-            foreach (var item in Model)
+    <table class="table table-bordered table-active table-striped">
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Code)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RegNo)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
             {
-                sl++;
+                foreach (var item in Model)
+                {
+                    sl++;
 
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Code)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RegNo)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
                 <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Code)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RegNo)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                    </td>
+                    <td class="text-center text-danger" colspan="5"><strong>Data Not Found!</strong> </td>
                 </tr>
+
             }
         }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="5"><strong>Data Not Found!</strong> </td>
-            </tr>
 
-        }
-    }
 
-    
-</table>
+    </table>
+</div>
+
+
