--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -4,80 +4,81 @@
     ViewBag.Title = "Requisition Status List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container" style="min-height: 400px">
 
-<h2>Requisition Status List</h2>
-<br/>
+    <h2>Requisition Status List</h2>
+    <hr />
 
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+                <p></p>
+            </div>
 
-        </div>
+            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+                <p>
+                    @using (Html.BeginForm("Index", "RequisitionStatus", FormMethod.Get))
+                    {
 
-        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-            <p>
-                @using (Html.BeginForm("Index", "RequisitionStatus", FormMethod.Get))
-                {
+                        <b>Search by (Requisition Number) </b>
+                        @Html.TextBox("searchText")
+                        <input type="submit" value="Search" />
 
-                    <b>Search by (Requisition Number) </b>
-                    @Html.TextBox("searchText")
-                    <input type="submit" value="Search" />
+                    }
+                </p>
 
-                }
-            </p>
-
+            </div>
         </div>
     </div>
-</div>
-<br />
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StatusType)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
-    @{
-        var sl = 0;
-        if (Model.Count()!=0)
-        {
-            foreach (var item in Model)
-            {
-                sl++;
 
+    <table class="table table-bordered table-active table-striped">
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
+            {
+                foreach (var item in Model)
+                {
+                    sl++;
+
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RequisitionNumber)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StatusType)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
                 <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RequisitionNumber)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StatusType)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                    </td>
+                    <td class="text-center text-danger" colspan="4"> Data Not Found!</td>
                 </tr>
             }
         }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="4"> Data Not Found!</td>
-            </tr>
-        }
-    }
 
-
-</table>
+    </table>
+</div>
