--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -3,116 +3,118 @@
 @{
     ViewBag.Title = "All Requisitions";
 }
-<h2>All Requisitions</h2>
-<hr/>
+<div class="container" style="min-height: 400px">
+    <h2>All Requisitions</h2>
+    <hr />
 
-@if (TempData["msg"] != null)
-{
-    <div class="alert alert-info">
-        @Html.Raw(TempData["msg"])
-    </div>
-}
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
-            <p>
-                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
-            </p>
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
         </div>
+    }
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+                <p>
+                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
+                </p>
+            </div>
 
-        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-            <p>
-                @using (Html.BeginForm("Index", "Requisitions", FormMethod.Get))
-                {
-                    <b>Search by : </b>
-                    @Html.TextBox("searchText")
-                    <input type="submit" value="Search" />
-                }
-            </p>
-            @*<input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
-            <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>*@
+            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+                <p>
+                    @using (Html.BeginForm("Index", "Requisitions", FormMethod.Get))
+                    {
+                        <b>Search by : </b>
+                        @Html.TextBox("searchText")
+                        <input type="submit" value="Search" />
+                    }
+                </p>
+                @*<input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
+                    <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>*@
+            </div>
         </div>
     </div>
-</div>
-<br />
 
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <td>
-            SL
-        </td>
-        <th>
-            @Html.DisplayNameFor(model => model.Employee.FullName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FromPlace)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DestinationPlace)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EndDateTime)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequestFor)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
-    @{
-        var sl = 0;
-        if (Model.Count()!=0)
-        {
-            foreach (var item in Model)
+    <table class="table table-bordered table-active table-striped">
+        <tr>
+            <td>
+                SL
+            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Employee.FullName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FromPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DestinationPlace)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EndDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequestFor)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
             {
-                sl++;
+                foreach (var item in Model)
+                {
+                    sl++;
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Employee.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FromPlace)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DestinationPlace)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EndDateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RequestFor)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
                 <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Employee.FullName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.FromPlace)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DestinationPlace)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.StartDateTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.EndDateTime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RequestFor)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                    </td>
+                    <td class="text-center text-danger" colspan="9"> Data Not Found!</td>
                 </tr>
             }
         }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="9"> Data Not Found!</td>
-            </tr>
-        }
-    }
 
 
-</table>
+    </table>
+</div>
+
