--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -3,107 +3,108 @@
 @{
     ViewBag.Title = "Vehicle List";
 }
+<div class="container" style="min-height: 400px">
+    <h2>Vehicle List</h2>
+    <hr />
 
-<h2>Vehicle List</h2>
-<hr/>
-
-@if (TempData["msg"] != null)
-{
-    <div class="alert alert-info">
-        @Html.Raw(TempData["msg"])
-    </div>
-}
-<div class="container">
-    <div class="row align-items-center">
-        <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
-            <p>
-                @Html.ActionLink("Create New", "Create",null,new {@class="btn btn-default"})
-            </p>
+    @if (TempData["msg"] != null)
+    {
+        <div class="alert alert-info">
+            @Html.Raw(TempData["msg"])
         </div>
+    }
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+                <p>
+                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
+                </p>
+            </div>
 
-        <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
-            <p>
-                @using (Html.BeginForm("Index", "Vehicles", FormMethod.Get))
-                {
-                    <b>Search by (Type/Brand/Model/Reg No/Chassis/Seat Capacity ) </b>
-                    @Html.TextBox("searchText")
-                    <input type="submit" value="Search" />
-                }
-            </p>
+            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+                <p>
+                    @using (Html.BeginForm("Index", "Vehicles", FormMethod.Get))
+                    {
+                        <b>Search by (Type/Brand/Model/Reg No/Chassis/Seat Capacity ) </b>
+                        @Html.TextBox("searchText")
+                        <input type="submit" value="Search" />
+                    }
+                </p>
+            </div>
         </div>
     </div>
-</div>
 
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.VehicleTypeId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BrandName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModelName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RegNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ChassisNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model=>model.SeatCapacity)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
-    @{
-        var sl = 0;
-        if (Model.Count()!=0)
-        {
-            foreach (var item in Model)
+    <table class="table table-bordered table-active table-striped">
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.VehicleTypeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BrandName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ModelName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RegNo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ChassisNo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SeatCapacity)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        @{
+            var sl = 0;
+            if (Model.Count() != 0)
             {
-                sl++;
+                foreach (var item in Model)
+                {
+                    sl++;
+                    <tr>
+                        <td>
+                            @sl
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.VehicleType.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.BrandName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ModelName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RegNo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ChassisNo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.SeatCapacity)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            }
+            else
+            {
                 <tr>
-                    <td>
-                        @sl
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.VehicleType.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BrandName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ModelName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RegNo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ChassisNo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem=>item.SeatCapacity)
-                    </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                    </td>
+                    <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
                 </tr>
             }
         }
-        else
-        {
-            <tr>
-                <td class="text-center text-danger" colspan="8"> Data Not Found!</td>
-            </tr>
-        }
-    }
 
-</table>
+    </table>
+</div>
