--- a/RMS.App/Views/Vehicles/Edit.cshtml
+++ b/RMS.App/Views/Vehicles/Edit.cshtml
@@ -37,6 +37,7 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.RegNo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RegNo, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message1</p>
             </div>
         </div>
 
@@ -45,6 +46,7 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.ChassisNo, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ChassisNo, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message2</p>
             </div>
         </div>
 
