--- a/RMS.App/Views/Designations/Edit.cshtml
+++ b/RMS.App/Views/Designations/Edit.cshtml
@@ -21,6 +21,7 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.Title, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.Title, "", new {@class = "text-danger"})
+                <p class="text-danger">@ViewBag.Message</p>
             </div>
         </div>
 
