--- a/RMS.App/Views/EmployeeTypes/Create.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Create.cshtml
@@ -20,6 +20,7 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.Type, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message</p>
             </div>
         </div>
 
