--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -43,6 +43,7 @@
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.Email, new {htmlAttributes = new {@class = "form-control"}})
                     @Html.ValidationMessageFor(model => model.Email, "", new {@class = "text-danger"})
+                    <p class="text-danger">@ViewBag.Message1</p>
                 </div>
             </div>
 
@@ -51,6 +52,7 @@
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.ContactNo, new {htmlAttributes = new {@class = "form-control"}})
                     @Html.ValidationMessageFor(model => model.ContactNo, "", new {@class = "text-danger"})
+                    <p class="text-danger">@ViewBag.Message2</p>
                 </div>
             </div>
         </div>
@@ -61,6 +63,7 @@
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.NID, new {htmlAttributes = new {@class = "form-control"}})
                     @Html.ValidationMessageFor(model => model.NID, "", new {@class = "text-danger"})
+                    <p class="text-danger">@ViewBag.Message3</p>
                 </div>
             </div>
 
@@ -69,6 +72,7 @@
                 <div class="col-md-9">
                     @Html.EditorFor(model => model.DrivingLicence, new {htmlAttributes = new {@class = "form-control"}})
                     @Html.ValidationMessageFor(model => model.DrivingLicence, "", new {@class = "text-danger"})
+                    <p class="text-danger">@ViewBag.Message4</p>
                 </div>
             </div>
 
