--- a/RMS.App/Views/VehicleTypes/Create.cshtml
+++ b/RMS.App/Views/VehicleTypes/Create.cshtml
@@ -19,6 +19,7 @@
             <div class="col-md-4">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                <p class="text-danger">@ViewBag.Message</p>
             </div>
         </div>
 
