--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -151,10 +151,9 @@
                         <br/>
                         <div class="form-group row">
 
-                            @*@Html.LabelFor(model => model.AddressViewModel.AddressType, htmlAttributes: new { @class = "control-label col-md-2" })*@
                             <div class="col-md-12">
-                                @Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Present Address", Type = "Text", value = "Present Address", @readOnly = "readonly", @id = "addressType"}})
-                                @*@Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})*@
+                                <b><strong><u>Mailing/Present Address :</u></strong></b>
+                                @*@Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Present Address", Type = "Text", value = "Present Address", @readOnly = "readonly", @id = "addressType"}})*@
                             </div>
                         </div>
                         <div class="form-group row">
@@ -223,8 +222,8 @@
                         <br/>
                         <div class="form-group row">
                             <div class="col-md-6">
-                                @Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Permanent Address", Type = "Text", value = "Permanent Address", @readOnly = "readonly"}})
-                                @*@Html.ValidationMessageFor(model => model.AddressViewModel.AddressType, "", new {@class = "text-danger"})*@
+                                <b><strong><u>Permanent Address :</u></strong></b>
+                                @*@Html.EditorFor(model => model.AddressViewModel.AddressType, null, new {htmlAttributes = new {@class = "form-control", PlaceHolder = "Permanent Address", Type = "Text", value = "Permanent Address", @readOnly = "readonly"}})*@
                             </div>
                             <br/><br/>
                             <div class="col-md-5" style="margin: 0 15px;">
@@ -375,8 +374,7 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    @*@<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery-1.10.2.js"></script>*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/AddressJs/CreateEmployeeAddress.js"></script>
 
 }
