--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -467,7 +467,7 @@
             </div>
         </div>
     }
-        <table id="addressTable" class="table table-bordered " @*style="display: none !important"*@>
+        <table id="addressTable" class="table table-bordered " style="display: none !important">
             <thead>
                 <tr>
                     <th style="width: 10%">SL</th>
