--- a/RMS.App/Views/Vehicles/Create.cshtml
+++ b/RMS.App/Views/Vehicles/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Create Vehicle</h2>
 <hr/>
 
-@using (Html.BeginForm("Create", "Vehicles", FormMethod.Post))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -48,7 +48,7 @@
                 <p class="text-danger">@ViewBag.Message2</p>
             </div>
         </div>
-       
+        
         <div class="form-group row">
             @Html.LabelFor(model => model.SeatCapacity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-2">
@@ -56,14 +56,14 @@
                 @Html.ValidationMessageFor(model => model.SeatCapacity, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group row">
             @Html.LabelFor(model => model.VehicleTypeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.DropDownList("VehicleTypeId", null, "Select", htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.VehicleTypeId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model=>model.VehicleTypeId,"",new {@class="text-danger"})
             </div>
         </div>
+       
 
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
@@ -77,4 +77,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
 }
