--- a/RMS.App/Views/Vehicles/Index.cshtml
+++ b/RMS.App/Views/Vehicles/Index.cshtml
@@ -15,17 +15,17 @@
     }
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
+            <div class="col-lg-3 col-sm-3 col-3 header-top-left no-padding">
                 <p>
                     @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
                 </p>
             </div>
 
-            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
                 <p>
                     @using (Html.BeginForm("Index", "Vehicles", FormMethod.Get))
                     {
-                        <b>Search by (Type/Brand/Model/Reg No/Chassis/Seat Capacity ) </b>
+                        <b>Search by (Type/Brand/Model/Reg No/Chassis no/Seat ) </b>
                         @Html.TextBox("searchText")
                         <input type="submit" value="Search" />
                     }
