--- a/RMS.App/Views/Shared/_LayoutHome.cshtml
+++ b/RMS.App/Views/Shared/_LayoutHome.cshtml
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="~/Content/css/jquery-ui.css">
     <link rel="stylesheet" href="~/Content/css/owl.carousel.css">
     <link rel="stylesheet" href="~/Content/css/main.css">
-    
+    @RenderSection("styles", required: false)
 </head>
 <body>
 <!--Start Header Menu-->
