--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -1,10 +1,13 @@
-﻿@model RMS.App.ViewModels.RequisitionViewModel
+﻿@using RMS.App.ViewModels
+@model RMS.App.ViewModels.RequisitionViewModel
 
 @{
     ViewBag.Title = "Vehicle Requisition";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles{
+    
+<link href="~/Content/bootstrap-datetimepicker.css" rel="stylesheet" />
+}
 <div class="col-md-12" style="height: 400px;">
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#ownRequest">Request For Me</a> &nbsp;
     <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#forRequest">Request For Other</a> &nbsp;
@@ -22,7 +25,7 @@
             </div>
             <div class="modal-body table-info">
 
-                @using (Html.BeginForm())
+                @using (Html.BeginForm("Create","Requisitions",FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
 
@@ -48,19 +51,41 @@
 
                         <div class="form-group row">
                             @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.EditorFor(model => model.StartDateTime, new { htmlAttributes = new { @class = "form-control datepicker" } })
-                                @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
+                            <div class="col-md-4">
+                                @Html.EditorFor(model => model.StartDateTime, new {htmlAttributes = new {@class = "form-control datePicker" } })
+                                @Html.ValidationMessageFor(model => model.StartDateTime, "", new {@class = "text-danger"})
                             </div>
+
+                            @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.StartTime, new { htmlAttributes =new { @class= "form-control timePicker" } })
+                                @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
+                            </div>
+
                         </div>
 
                         <div class="form-group row">
                             @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
-                            <div class="col-md-9">
-                                @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                            <div class="col-md-4">
+                                @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control datePicker" } })
                                 @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
                             </div>
+
+                            @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-3">
+                                @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
+                                @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
+                            </div>
+
                         </div>
+
+                        @*<div class="form-group row">
+                            @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
+                            <div class="col-md-9">
+                                @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control", @id= "datepicker1" } })
+                                @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
+                            </div>
+                        </div>*@
 
                         <div class="form-group row">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-3" })
@@ -93,7 +118,6 @@
 </div>
 
 <!--end Request for me-->
-
 <div class="modal fade" id="myRequest">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -115,7 +139,7 @@
     </div>
 </div>
 
-<!--Request for other -->
+<!--Request for other-->
 <div class="modal fade" id="forRequest">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -131,5 +155,12 @@
 </div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+
+@Scripts.Render("~/bundles/jqueryval")
+@*<script src="~/Scripts/jquery-3.2.1.js"></script>*@
+<script src="~/Scripts/moment.js"></script>
+@*<script src="~/Scripts/bootstrap.js"></script>*@
+<script src="~/Scripts/bootstrap-datetimepicker.js"></script>
+<script src="~/Scripts/RequisitionJs/RequisitionDataTime.js"></script>
+
 }
