--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -11,6 +11,7 @@
 <head>
     <meta name="viewport" content="width=device-width"/>
     <title>Create Request For Other</title>
+
 </head>
 
 <body>
@@ -40,17 +41,29 @@
 
             <div class="form-group row">
                 @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.StartDateTime, new {htmlAttributes = new {@class = "form-control"}})
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.StartDateTime, new {htmlAttributes = new {@class = "form-control datePicker" } })
                     @Html.ValidationMessageFor(model => model.StartDateTime, "", new {@class = "text-danger"})
+                </div>
+
+                @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
+                    @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
                 @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
-                <div class="col-md-9">
-                    @Html.EditorFor(model => model.EndDateTime, new {htmlAttributes = new {@class = "form-control"}})
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.EndDateTime, new {htmlAttributes = new {@class = "form-control datePicker" } })
                     @Html.ValidationMessageFor(model => model.EndDateTime, "", new {@class = "text-danger"})
+                </div>
+
+                @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control timePicker" } })
+                    @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
                 </div>
             </div>
 
