--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -196,11 +196,10 @@
                         <div class="form-group row">
                             <div class="col-md-3">
                             </div>
-                            <br/><br/>
-                            <div class="col-md-6" style="margin: 0 15px;">
-                                <p>
-                                    <input type="checkbox" id="PACheckBox"/> <strong> Present address is true! </strong>
-                                </p>
+                            <div class="col-md-6">
+                                
+                                <input type="checkbox" id="PACheckBox"/> <strong> Present address is true! </strong>
+
                             </div>
                         </div>
                     </div>
@@ -216,10 +215,13 @@
                         <br/>
                     </div>
                     <div class="col-md-6">
-                        <br/>
-                        <p>
-                            <input type="checkbox" id="PACheckBox1"/> <strong> Same as present address </strong>
-                        </p>
+                        <br />
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-9">
+                                <input type="checkbox" id="PACheckBox1"/> <strong> Same as present address! </strong>
+                            </div>
+                        </div>
                         <br/>
                     </div>
 
@@ -287,10 +289,10 @@
                             <div class="col-md-3">
                             </div>
                             <br/><br/>
-                            <div class="col-md-6" style="margin: 0 15px;">
-                                <p>
+                            <div class="col-md-6">
+
                                     <input type="checkbox" id="PACheckBox2"/> <strong> Permanent address is true! </strong>
-                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -372,11 +374,9 @@
                 <div class="form-group row">
                     <div class="col-md-3">
                     </div>
-                    <br/><br/>
-                    <div class="col-md-6" style="margin: 0 15px;">
-                        <p>
-                            <input type="checkbox" id="PACheckBox"/> <strong> Present address is true! </strong>
-                        </p>
+                    <div class="col-md-6">
+                        
+                        <input type="checkbox" id="PACheckBox"/> <strong> Present address is true! </strong>
                     </div>
                 </div>
             </div>
@@ -391,9 +391,12 @@
             </div>
             <div class="col-md-6">
                 <br/>
-                <p>
-                    <input type="checkbox" id="PACheckBox1"/> <strong> Same as present address </strong>
-                </p>
+                <div class="row">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-9">
+                        <input type="checkbox" id="PACheckBox1" /> <strong> Same as present address! </strong>
+                    </div>
+                </div>
                 <br/>
             </div>
 
@@ -457,11 +460,10 @@
                 <div class="form-group row">
                     <div class="col-md-3">
                     </div>
-                    <br/><br/>
-                    <div class="col-md-6" style="margin: 0 15px;">
-                        <p>
-                            <input type="checkbox" id="PACheckBox2"/> <strong> Permanent address is true! </strong>
-                        </p>
+
+                    <div class="col-md-6">
+                        
+                        <input type="checkbox" id="PACheckBox2"/> <strong> Permanent address is true! </strong>
                     </div>
                 </div>
             </div>
