--- a/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
+++ b/RMS.App/Views/AssignRequisitions/ViewDetails.cshtml
@@ -9,6 +9,11 @@
     <hr/>
     <table class="table table-light table-active table-primary table-hover">
         
+        
+        <tr>
+            <td>@Html.DisplayNameFor(model => model.RequisitionNumber)</td>
+            <td>@Html.DisplayFor(model => model.RequisitionNumber)</td>
+        </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.FromPlace)</td>
             <td>@Html.DisplayFor(model => model.FromPlace)</td>
@@ -16,14 +21,6 @@
         <tr>
             <td>@Html.DisplayNameFor(model => model.DestinationPlace)</td>
             <td>@Html.DisplayFor(model => model.DestinationPlace)</td>
-        </tr>
-        <tr>
-            <td>@Html.DisplayNameFor(model => model.StartDateTime)</td>
-            <td>@Html.DisplayFor(model => model.StartDateTime)</td>
-        </tr>
-        <tr>
-            <td>@Html.DisplayNameFor(model => model.EndDateTime)</td>
-            <td>@Html.DisplayFor(model => model.EndDateTime)</td>
         </tr>
         <tr>
             <td>@Html.DisplayNameFor(model => model.Description)</td>
