--- a/RMS.App/Views/Shared/_MenuBar.cshtml
+++ b/RMS.App/Views/Shared/_MenuBar.cshtml
@@ -32,7 +32,7 @@
                         <li>@Html.ActionLink("About", "About", "Home")</li>
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         <li class="menu-has-children">
-                            <a href="#">Organization SetUp</a>
+                            <a href="#">Organization</a>
                             <ul>
                                 <li class="menu-has-children">
                                     <a href="#">Organization</a>
